src/test/ui/confuse-field-and-method/issue-18343.stderr
error[E0599]: no method named `closure` found for type `Obj<[closure@$DIR/issue-18343.rs:6:28: 6:33]>` in the current scope
  --> $DIR/issue-18343.rs:7:7
   |
LL | struct Obj<F> where F: FnMut() -> u32 {
   | ------------------------------------- method `closure` not found for this
...
LL |     o.closure();
   |       ^^^^^^^ field, not a method
   |
   = help: use `(o.closure)(...)` if you meant to call the function stored in the `closure` field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
